Moving to queryon, build.gradle & much more - Updated a lot of dependencies - Improved build.gradle with gradle.properties - Removed a lot of no longer used classes - Moved SQL folder out of "network" subfolder - Moved from our own SQL system to Queryon - Added few missing annotation inside the discord bot package (Supresswarning + NetworkOnly)